emqm_frontend_autorun

--- a/assets/frontend.html
+++ b/assets/frontend.html
@@ -1,3 +1,4 @@
+<!-- Echbay Email Queue Auto-run Script -->
 <script>
     const echbayEmailQueueBaseUrl = '{base_plugin_url}';
     document.addEventListener('DOMContentLoaded', function () {
@@ -8,3 +9,4 @@
         document.body.appendChild(script); // chèn vào cuối body (footer)
     });
 </script>
+<!-- End Echbay Email Queue Auto-run Script -->
